<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_title_plants"
        style="@style/DefaultTextView"
        android:layout_marginTop="@dimen/dimen_standard"
        android:text="@string/plants_name"
        android:textColor="@color/primaryTextColor"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/tv_description_title"
        style="@style/DefaultTextView"
        android:layout_marginTop="@dimen/dimen_standard"
        android:text="@string/description"
        android:textColor="@android:color/darker_gray"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/tv_description_plant"
        style="@style/DefaultTextView"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/dimen_small"
        android:text="@string/capstone_description"
        android:textColor="@color/primaryTextColor"
        android:textSize="14sp" />

</LinearLayout>